projects/examples/source/02.06.cpp
/////////////////////////////////////

// chapter : Basics of Programming

/////////////////////////////////////

// section : Fundamental Data Types

/////////////////////////////////////

// content : Constant Objects
//
// content : Type Qualifier const

/////////////////////////////////////

int main()
{
    [[maybe_unused]] int const x = 1;

//  ---------------------------------

//	x = 2; // error
}

/////////////////////////////////////